<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.7.4</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>

	<groupId>rs.laxsrbija.chores</groupId>
	<artifactId>chores-parent</artifactId>
	<packaging>pom</packaging>
	<version>0.0.1-SNAPSHOT</version>
	<name>Chores Manager</name>

	<modules>
		<module>chores-backend</module>
		<module>chores-frontend</module>
	</modules>

	<properties>
		<java.version>17</java.version>
		<jsondb-core.version>1.0.106</jsondb-core.version>
		<springdoc-openapi-ui.version>1.6.8</springdoc-openapi-ui.version>

		<node.version>v16.15.0</node.version>
		<npm.version>8.5.5</npm.version>

		<maven-clean-plugin.version>3.1.0</maven-clean-plugin.version>
		<frontend-maven-plugin.version>1.12.0</frontend-maven-plugin.version>

		<sonar.organization>laxsrbija</sonar.organization>
		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>io.jsondb</groupId>
				<artifactId>jsondb-core</artifactId>
				<version>${jsondb-core.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springdoc</groupId>
				<artifactId>springdoc-openapi-ui</artifactId>
				<version>${springdoc-openapi-ui.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>${maven-clean-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>com.github.eirslett</groupId>
					<artifactId>frontend-maven-plugin</artifactId>
					<version>${frontend-maven-plugin.version}</version>
					<executions>
						<execution>
							<id>install node and npm</id>
							<goals>
								<goal>install-node-and-npm</goal>
							</goals>
							<configuration>
								<nodeVersion>${node.version}</nodeVersion>
								<npmVersion>${npm.version}</npmVersion>
							</configuration>
						</execution>
						<execution>
							<id>npm install</id>
							<goals>
								<goal>npm</goal>
							</goals>
							<configuration>
								<arguments>install</arguments>
							</configuration>
						</execution>
						<execution>
							<id>npm run build</id>
							<goals>
								<goal>npm</goal>
							</goals>
							<phase>compile</phase>
							<configuration>
								<arguments>run build</arguments>
							</configuration>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

</project>
